--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name:  weather-app
-          image: natalie/weather-app:latest
+          image: natallie/weather-app:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
